tests/toy/neg/001646_mutation.toylang
program a = { while a do var a : bool sleep; } .
